# expose

./: .dockerignore  .gitattributes  .gitignore  .pre-commit-config.yaml  AUTHORS.md  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  ETHICS.md  GOVERNANCE.md  HANDOFF.md  INVENTORY.md  LICENSE  README.md  ROADMAP.md  SECURITY.md  alembic.ini  docker-compose.yml  init-and-push-to-gitea.sh  pyproject.toml
.githooks/: pre-push
.github/: PULL_REQUEST_TEMPLATE.md
.github/DISCUSSION_TEMPLATE/: ideas.yml  q-and-a.yml  show-and-tell.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  collector_request.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml
alembic/: env.py
alembic/versions/: 2026_05_10_0900-0001_initial_schema_tenants_entities_relationships_runs.py  2026_05_11_1830-0002_add_run_metadata_column.py
community-rulepacks/: README.md
deploy/: cosign-keypair-setup.md
deploy/grafana/: README.md  expose-overview.json  expose-tenant.json
deploy/helm-chart/: .helmignore  Chart.yaml  test-template.sh  values.yaml
deploy/helm-chart/templates/: NOTES.txt  _helpers.tpl  configmap.yaml  deployment-collector-worker.yaml  deployment-control-plane.yaml  deployment-scanner-worker.yaml  ingress.yaml  networkpolicy.yaml  pdb.yaml  podsecurity.yaml  service-control-plane.yaml  service-nats.yaml  serviceaccount.yaml  statefulset-nats.yaml
docs/: CODE_OF_CONDUCT_ENFORCEMENT.md  HISTORY.md  SPEC.md  collectors.md  community-rulepacks.md  glossary.md  hero-use-cases.md  issues-backlog.md  operator-quickstart.md  positioning.md  problem-statement.md  qa-browser-tests.md  quickstart.md  responsible-ai.md  use-cases.md  user-guide.md  why-expose.md
docs/adr/: ADR-001-implementation-language.md  ADR-002-graph-storage.md  ADR-003-deployment-posture.md  ADR-004-output-artifact.md  ADR-005-llm-integration.md  ADR-006-repository-and-licensing.md  ADR-007-multi-tenancy.md  ADR-008-authorized-use-and-ethics.md  ADR-009-commercial-structure.md  ADR-010-fedramp-ready-posture.md
docs/architecture/: 00-pipeline-stages.md  10-two-environment-model.md  20-deployment-topology.md  30-observation-graph.md  40-multi-tenancy.md  50-scanner-egress.md  60-attribution-and-llm-enrichment.md  70-product-surfaces.md  80-federal-deployment-pattern.md  90-egress-flow.md  95-dependency-map.md  README.md
docs/deferred-issues/: deferred-issues-decision-03.md  deferred-issues-decision-04-revisited.md  deferred-issues-decision-04.md  deferred-issues-decision-05.md  deferred-issues-decision-06.md  deferred-issues-decision-07.md
docs/strategy/: ai-leverage-roadmap.md  air-gap-deployment-guide.md  commercial-moat-and-revenue.md  competitive-analysis.md  competitive-positioning.md  critical-path.md  data-provider-expansion.md  egress-deployment-guide.md  federal-customer-deployment-guide.md  framework-annotation.md  framework-mapping.md  functional-equivalence.md  lab-to-production-runbook.md  module-spec-identity-surface.md  module-spec-threat-context.md  mssp-licensing.md  network-security-guide.md  persona-analysis.md  postgres-deployment-guide.md  pricing-tiers.md  sbom-and-signing-guide.md  sdlp.md  sprint-3-4-plan.md
examples/: tenant-config.yaml.template
examples/eval-datasets/: README.md  adversarial.json  ambiguous.json  confirmed_not_yours.json  confirmed_yours.json
examples/outputs/: README.md  audit-log-example.jsonl  eval-report-example.json  findings-example.json  graph-example.json  provenance-example.json  scan-report-example.json  siem-splunk-example.json
examples/product-signatures/: catalog.json
examples/rulepacks/: README.md  cloud-first.json  conservative.json  example-baseline.json
examples/scope/: hard-mode-regulated.yaml  medium-default.yaml  scope-README.md  soft-mode-research.yaml
examples/seeds/: acme-corporate.yaml  consulting-engagement.yaml  municipal-agency.yaml  research-test-bed.yaml  seeds-README.md
examples/smoke-tests/: cyberark-passive-tier1.md
examples/wordlists/: subdomains-5000.txt
examples/workflows/: README.md  basic-scan.sh  eval-rulepack.sh  scheduled-monitoring.sh  siem-integration.sh
schemas/: canonical-artifact-v1.json  manifest-v1.json  rulepack-v1.json
scripts/: build-oss-dist.sh  demo.sh  generate-sbom.sh  import-credentials.sh  qa-gate-25.sh  sanitize-for-github.sh  sync-credentials.sh  trademark-check.sh
src/expose/: __init__.py  cli.py
src/expose/api/: __init__.py  admin.py  app.py  auth.py  auth_middleware.py  credentials.py  enforcement.py  events.py  export.py  findings.py  graph.py  identity.py  metrics.py  provenance.py  rbac.py  reports.py  run_log.py  runs.py  scheduler.py  schemas.py  signing.py  soc.py  tenant_config.py  tenants.py  timeline.py  webhooks.py
src/expose/broker/: __init__.py  nats_client.py  stream_setup.py  types.py  worker.py
src/expose/collectors/: __init__.py  base.py  registry.py  tiers.py
src/expose/compliance/: __init__.py  data_deletion.py  data_export.py  misuse_detection.py
src/expose/crypto/: __init__.py  fips_adapter.py  signing.py
src/expose/db/: __init__.py  engine.py  models.py
src/expose/egress/: __init__.py  base.py  direct.py  http_connect.py  ip_guard.py  (+3 more)
tests/: conftest.py  test_active_dns.py  test_active_http.py  test_active_port_surface.py  test_active_tls.py  test_admin_api.py  test_api_key_auth.py  test_app.py  test_app_wiring.py  test_artifact_generator.py  test_artifact_planner.py  test_artifact_signing_e2e.py  test_artifact_validator.py  test_audit_logging.py  test_auth.py  test_bgp_he_toolkit.py  test_bgp_ripestat.py  test_bgp_team_cymru.py  test_broker.py  test_bucket_parser.py  test_ciso_report.py  test_cli_run.py  test_cli_serve.py  test_cli_status.py  test_cloud_ranges.py  test_cloud_storage_exposure.py  test_collector_filter.py  test_collectors_framework.py  test_common_crawl.py  test_compliance.py  test_cost_tracking.py  test_credential_management.py  test_credential_resolver.py  test_ct_censys.py  test_ct_certspotter.py  test_ct_certstream.py  test_ct_crtsh.py  test_dark_web_indicators.py  test_dark_web_validation.py  test_delta.py  (+115 more)
(+203 files in other folders)
